# Aternos-minecraft-bot

./: .replit  README.md  pyproject.toml  steve.py  tasks.py
aternosapi/: __init__.py
