[tool.poetry]
name = "repl_python3_Aternos-minecraft-bot"
version = "0.1.0"
description = ""
authors = ["UrAvgEngineer <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^3.141.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
